--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mint-ui": "^2.2.13",
-    "vue": "^2.6.10"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "scss": "^0.2.4",
+    "scss-loader": "0.0.1",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
