--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve ",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -18,6 +18,7 @@
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
     "vue": "^2.6.10",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.0.7"
   },
   "devDependencies": {
