--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^3.3.6"
   },
   "eslintConfig": {
     "root": true,
